--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chepuri Hari Kiran's Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+</head>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<body>
+    <div class="container">
+        <h1>Chepuri Hari Kiran's Portfolio</h1>
+        <h2>I'm a Web Developer</h2>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
+        <hr />
 
-<!-- TODO 5: Add a link to the project pages -->
+        <h3><a href="./public/movie-ranking.html" class="project-title">Movie Ranking Project</a></h3>
+        <a href="./public/movie-ranking.html">
+            <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview" />
+        </a>
 
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+        <h3><a href="./public/birthday-invite.html" class="project-title">Birthday Invite Project</a></h3>
+        <a href="./public/birthday-invite.html">
+            <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview" />
+        </a>
 
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+        <hr />
+
+        <div class="nav-links">
+            <a href="./public/about.html">About Me</a>
+            <a href="./public/contact.html">Contact Me</a>
+        </div>
+    </div>
+</body>
+
+</html>
